# quantum-crypto

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  generate_kat.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  header_parsing.rs  payload_decryption.rs  streaming_chunks.rs  structured_password.rs  sync_state.rs
src/: errors.rs  lib.rs  serialization.rs  types.rs
src/asymmetric/: keys.rs  ml_dsa.rs  ml_kem.rs  mod.rs
src/generator/: mod.rs
src/kdf/: argon2id.rs  hkdf.rs  mod.rs
src/streaming/: mod.rs  protocol.rs
src/symmetric/: hmac.rs  keys.rs  mod.rs  root_keys.rs  xchacha.rs
tests/: generate_kat.rs  integration.rs  kat_tests.rs  security_tests.rs  serialization_tests.rs
tests/asymmetric/: ml_dsa_tests.rs  ml_kem_tests.rs  mod.rs
tests/generator/: generator_tests.rs  mod.rs
tests/kdf/: argon2id_tests.rs  hkdf_tests.rs  mod.rs
tests/streaming/: mod.rs  session_boundary_tests.rs  streaming_tests.rs
tests/symmetric/: hmac_tests.rs  mod.rs  xchacha_tests.rs
