[package]
name = "quantum-crypto"
version = "1.0.0"
edition = "2024"
authors = ["TurboBoostTechnologies"]
description = "Post-quantum secure encryption library using ML-KEM (FIPS 203), XChaCha20-Poly1305, and ML-DSA (FIPS 204)"
license-file = "LICENSE"

[dependencies]
argon2 = { version = "0.5", features = ["zeroize"] }
blake3 = "1.8"
chacha20poly1305 = "0.10"
hkdf = "0.13.0"
hmac = "0.13.0"
lazy_static = "1.4"
libc = "0.2"
pqcrypto-mldsa = "0.1.2"
pqcrypto-mlkem = "0.1.1"
pqcrypto-traits = "0.3.5"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.11.0"
subtle = "2.5"
thiserror = "1.0"
tokio = { version = "1.43", features = ["io-util", "rt", "sync"] }
tokio-util = { version = "0.7.10", default-features = false, features = ["rt"] }
zeroize = { version = "1.8", features = ["derive"] }

[workspace]
resolver = "2"

[dev-dependencies]
bincode = "1.3"
proptest = "1.11.0"
tempfile = "3.16"
tokio = { version = "1.43", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "test-util", "time"] }
tokio-test = "0.4"
trybuild = "1.0.116"
