[package]
name = "quantum-crypto-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bincode = "1.3.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7.18"

[dependencies.quantum-crypto]
path = ".."

[[bin]]
name = "header_parsing"
path = "fuzz_targets/header_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "payload_decryption"
path = "fuzz_targets/payload_decryption.rs"
test = false
doc = false
bench = false

[[bin]]
name = "streaming_chunks"
path = "fuzz_targets/streaming_chunks.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sync_state"
path = "fuzz_targets/sync_state.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_password"
path = "fuzz_targets/structured_password.rs"
test = false
doc = false
bench = false
